--- a/exercise1.html
+++ b/exercise1.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <h1>Make me green!</h1>
+        <h1>Make me yellow!</h1>
 
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
 
