--- a/exercise1.html
+++ b/exercise1.html
@@ -11,6 +11,7 @@
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
 
         <ul>
+            <li>THIS IS SUPER DIFICULT</li>
             <li>This is an unordered list.</li>
             <li>All items in this list should have a yellow background.</li>
             <li>Just the items though - not the whole list!</li>
